# rust-postgresfixture

./: .gitignore  .mailmap  .travis.yml  Cargo.toml  README.md  clippy.toml  rustfmt.toml  test  with-runtimes
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: cli.rs  cluster.rs  coordinate.rs  lib.rs  lock.rs  main.rs  prelude.rs  runtime.rs  util.rs  version.rs
src/cluster/: error.rs  tests.rs
src/runtime/: cache.rs  error.rs  strategies.rs  strategy.rs
src/version/: current.rs  error.rs  partial.rs
