[package]
authors = ["Gavin Panella <gavin@allenap.me>"]
categories = [
    "command-line-utilities",
    "database",
    "development-tools",
    "development-tools::testing",
]
description = "Easily create and manage PostgreSQL clusters on demand for testing and development."
edition = "2021"
keywords = ["database", "postgres", "postgresql"]
license = "Apache-2.0"
name = "postgresfixture"
readme = "README.md"
repository = "https://github.com/allenap/rust-postgresfixture"
version = "0.3.3"

[badges]
travis-ci = { repository = "allenap/rust-postgresfixture", branch = "master" }

[lib]
name = "postgresfixture"
path = "src/lib.rs"

[[bin]]
doc = false
name = "postgresfixture"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.1.6", features = ["derive", "env"] }
color-eyre = "^0.6.2"
ctrlc = { version = "^3.2.5", features = ["termination"] }
either = "^1.8.1"
postgres = "^0.19.4"
postgres-protocol = "^0.6.4"
nix = "^0.27.1"
rand = "^0.8.5"
regex = "^1.7.1"
shell-quote = "^0.3.0"
uuid = { version = "^1.3.0", features = ["v5"] }

[dev-dependencies]
tempdir = "^0.3.7"
